# python-sq

./: README.md  main.py  pyproject.toml  requirements.txt  test_sample.py
.github/workflows/: python-app.yml  sonarcloud-analysis.yml
frontend/: package-lock.json  package.json
