[project]
name = "python-sq"
version = "0.1.0"
description = "A simple Python test project"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
addopts = "--cov=main --cov-report=term --cov-report=xml"
testpaths = [
    "."
]

[tool.coverage.run]
branch = true
source = ["main"]

[tool.coverage.report]
show_missing = true
